related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/ApplicantForm__c.object-meta.xml
<CustomObject>
    <description>Custom object mocking FSC ApplicationForm. Tracks member product application lifecycle, identity verification, KYC status, and engagement history for the NFCU demo.</description>
    <label>Applicant Form</label>
    <nameField>
        <displayFormat>AF-{00000}</displayFormat>
        <label>Applicant Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicant Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>