related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/AbandonedDate__c.field-meta.xml
<CustomField>
    <fullName>AbandonedDate__c</fullName>
    <label>Abandoned Date</label>
    <type>Date</type>
</CustomField>