related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applicant Forms</relationshipLabel>
    <relationshipName>ApplicantForms</relationshipName>
    <type>Lookup</type>
</CustomField>