related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDate__c</fullName>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>