related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/BranchLocation__c.field-meta.xml
<CustomField>
    <fullName>BranchLocation__c</fullName>
    <label>Branch Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>