related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Applicant Forms</relationshipLabel>
    <relationshipName>ApplicantForms</relationshipName>
    <type>Lookup</type>
</CustomField>