related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applicant Forms</relationshipLabel>
    <relationshipName>ApplicantForms</relationshipName>
    <type>Lookup</type>
</CustomField>