related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/CreditTier__c.field-meta.xml
<CustomField>
    <fullName>CreditTier__c</fullName>
    <description>Applicant credit tier used to match the member to a credit card (Navy Federal "Best for" credit bands).</description>
    <label>Credit Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Excellent</fullName><default>false</default><label>Excellent</label></value>
            <value><fullName>Very Good</fullName><default>false</default><label>Very Good</label></value>
            <value><fullName>Good</fullName><default>false</default><label>Good</label></value>
            <value><fullName>Average</fullName><default>false</default><label>Average</label></value>
            <value><fullName>Fair</fullName><default>false</default><label>Fair</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>