related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/FraudFlag__c.field-meta.xml
<CustomField>
    <fullName>FraudFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fraud Flag</label>
    <type>Checkbox</type>
</CustomField>