related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/FraudFlagReason__c.field-meta.xml
<CustomField>
    <fullName>FraudFlagReason__c</fullName>
    <label>Fraud Flag Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address Mismatch</fullName>
            </value>
            <value>
                <fullName>PCS Address Change</fullName>
            </value>
            <value>
                <fullName>Identity Verification Failed</fullName>
            </value>
            <value>
                <fullName>Suspicious Activity</fullName>
            </value>
            <value>
                <fullName>Document Discrepancy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>