related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/FundingMethod__c.field-meta.xml
<CustomField>
    <fullName>FundingMethod__c</fullName>
    <label>Funding Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Deposit</fullName>
            </value>
            <value>
                <fullName>Transfer from NFCU Account</fullName>
            </value>
            <value>
                <fullName>External Transfer</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Cash Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>