related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/HouseholdId__c.field-meta.xml
<CustomField>
    <fullName>HouseholdId__c</fullName>
    <label>Household ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>