related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/HouseholdRole__c.field-meta.xml
<CustomField>
    <fullName>HouseholdRole__c</fullName>
    <label>Household Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Dependent</fullName>
            </value>
            <value>
                <fullName>Authorized User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>