related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/IdentityVerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>IdentityVerificationStatus__c</fullName>
    <label>Identity Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Manual Review Required</fullName>
            </value>
            <value>
                <fullName>Flagged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>