related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/LastEngagementChannel__c.field-meta.xml
<CustomField>
    <fullName>LastEngagementChannel__c</fullName>
    <label>Last Engagement Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>Online Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>