related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/LastEngagementDate__c.field-meta.xml
<CustomField>
    <fullName>LastEngagementDate__c</fullName>
    <label>Last Engagement Date</label>
    <type>Date</type>
</CustomField>