related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Messaging Session</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Applicant Forms</relationshipLabel>
    <relationshipName>Applicant_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>