related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/MilitaryAffiliation__c.field-meta.xml
<CustomField>
    <fullName>MilitaryAffiliation__c</fullName>
    <label>Military Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Duty</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>Reserve</fullName>
            </value>
            <value>
                <fullName>National Guard</fullName>
            </value>
            <value>
                <fullName>DoD Civilian</fullName>
            </value>
            <value>
                <fullName>Family Member</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>