related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/PreviousEngagementCount__c.field-meta.xml
<CustomField>
    <fullName>PreviousEngagementCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Previous Engagement Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>