related/member-portal-agent/force-app/main/default/objects/ApplicantForm__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flagship Premier Visa Signature Card</fullName>
            </value>
            <value>
                <fullName>Checking Account</fullName>
            </value>
            <value>
                <fullName>Savings Account</fullName>
            </value>
            <value>
                <fullName>Auto Loan</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Certificate (CD)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>